# Bookmarks-RAG-Knowledge-Assistant

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  config.yaml  docker-compose.yml  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  start.sh
.github/workflows/: ci.yml
Planning/: 0002-prd-bookmark-rag-tool.md  0003-prd-portfolio-credibility-hardening.md  Context_Transfer_Renaming_and_Setup.md  Learnings_from_Errors.md  readme_instructions.md  tasks-0002-prd-bookmark-rag-tool.md  tasks-0003-prd-portfolio-credibility-hardening.md
Planning/master_context_documents/: mcd_2026-07-18.md
app/: config.py  dependencies.py  main.py  test_config.py
app/embeddings/: base.py  local_embedder.py  openai_embedder.py  test_local_embedder.py  test_openai_embedder.py
app/ingestion/: chunker.py  cleaner.py  fetcher.py  parser.py  pipeline.py  test_chunker.py  test_cleaner.py  test_fetcher.py  test_parser.py  test_pipeline.py
app/rag/: engine.py  retriever.py  test_engine.py  test_retriever.py
app/routes/: ingest.py  query.py  test_ingest.py  test_query.py
app/storage/: base.py  duckdb_store.py  schema.sql  test_duckdb_store.py
evals/: chunking_comparison.py  run_chunking_comparison.py  run_evals.py  test_chunking_comparison.py  test_dataset.py  test_runner.py
evals/dataset/: qa_pairs.json
evals/metrics/: answer_quality.py  retrieval.py  test_answer_quality.py  test_retrieval.py
examples/integrations/: github_action.yml  (+1 more)
frontend/: index.html  package-lock.json  package.json
libs/universal-compounder/: README.md  pyproject.toml
libs/universal-compounder/src/universal_compounder/: cli.py  engine.py  git_utils.py  llm_adapter.py  prompts.py
static/: index.html
tests/: smoke_test.py  test_main.py  test_run.py
(+7 files in other folders)
