[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "universal-compounder"
version = "0.1.0"
description = "A universal, IDE-agnostic tool for automated knowledge compounding."
readme = "README.md"
authors = [{ name = "Trae AI", email = "ai@trae.ai" }]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.8"
dependencies = [
    "click",
    "rich",
    "gitpython",
    "openai",
    "python-dotenv",
    "pyyaml"
]

[project.scripts]
compound = "universal_compounder.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
